# model

./: .env.default  .gitignore  Dockerfile  Makefile  README.md  detect.ipynb  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: docker--publish.yml  docker-publish.yml
recognizer/: __main__.py  aws.py  config.py  schemas.py  utils.py
recognizer/client/: api.py  response.py  task.py
recognizer/handler/: make_csv.py  watcher.py
recognizer/handler/yolov5/: detect.py
recognizer/services/: download.py  poll.py  recognize.py  upload.py
