[tool.poetry]
name = "worker"
version = "0.1.0"
description = ""
authors = ["RomanZorkin <zorkin.roman@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
Flask = "^2.1.2"
httpx = "^0.23.0"
pydantic = "^1.9.1"
opencv-python = "^4.5.5"
torch = "^1.11.0"
pandas = "^1.4.2"
PyYAML = "^6.0"
Pillow = "^9.1.1"
tqdm = "^4.64.0"
torchvision = "^0.12.0"
matplotlib = "^3.5.2"
scipy = "^1.8.1"
tensorboard = "^2.9.1"
seaborn = "^0.11.2"
ipython = "^8.4.0"
psutil = "^5.9.1"
thop = "^0.1.0"
boto3 = "^1.24.7"

[tool.poetry.dev-dependencies]
mypy = "^0.960"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
